<resources>
    <string name="app_name">Quiz</string>
    <string name="random_quiz">Random Quiz</string>
    <string name="geography_quiz">Geography Quiz</string>
    <string name="national_knowledge_quiz">National Knowledge Quiz</string>
    <string name="sports_quiz">Sports Quiz</string>
    <string name="history_quiz">History Quiz</string>
    <string name="quiz_type">Quiz Type</string>
    <string name="new_game">New Game</string>
    <string name="high_scores">High Scores</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="quiz">Quiz</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="about_app">About</string>
    <string name="exit_app">Exit App</string>
    <string name="loading">Loading...</string>
    <string name="_10">10</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_4">Option 4</string>
    <string name="option_3">Option 3</string>
    <string name="feedback">Feedback</string>
    <string name="enter_entry">Enter name</string>
    <string name="next_quiz">Next Quiz</string>
    <string name="add_to_db">Add to db</string>
    <string name="enter_questions">Enter Questions</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="settings_menu">Settings Menu</string>
    <string name="about">About</string>
    <string name="dipta_mazumdar">Dipta Mazumdar</string>
    <string name="s_m_samnoon_abrar">S M Samnoon Abrar</string>
    <string name="developed_by">Developed by :</string>
    <string name="md_omar_faruque_fahad">MD Omar Faruque Fahad</string>
    <string name="developed_for_se_lab_project">Developed for SE Lab Project</string>
    <string name="what_is_the_question">What is the question?</string>
    <string name="_00_00">00:00</string>
    <string name="total_questions">Total Questions:</string>
    <string name="show_questions">Show questions</string>
    <string name="correct_answers">Correct Answers:</string>
    <string name="show_correct_answers">Show correct answers</string>
    <string name="_00">00</string>
    <string name="incorrect_answers">Incorrect Answers:</string>
    <string name="no_of_questions">No Of Questions</string>
    <string name="no_of_seconds">No Of Seconds</string>
    <string name="save_changes">Save Changes</string>
    <string name="start_quiz">Start Quiz</string>
    <array name="history">
        <item>question</item>
        <item>answer</item>
        <item>option1</item>
        <item>option2</item>
        <item>option3</item>
        <item>option4</item>
    </array>
</resources>
