<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/start_history_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_quiz"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/history_progress_bar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        app:layout_constraintTop_toBottomOf="@id/start_history_tv"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/history_loading_tv"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/loading"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/history_progress_bar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/option1"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/option_1"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/history_loading_tv"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/option2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/option_2"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/option1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/option3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/option_3"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/option2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/option4"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/option_4"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/option3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />


    <TextView
        android:id="@+id/feedback_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textSize="45sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option4" />


    <Button
        android:id="@+id/nextQuizBtn"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/next_quiz"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/feedback_tv"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>