<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_answer"
        tools:ignore="LabelFor,MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="74dp" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/add_to_db"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName6"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-14dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_questions"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/option_1"
        tools:ignore="LabelFor,MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName2"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="137dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/option_2"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName3"
        tools:ignore="Autofill,LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="289dp" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/option_3"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName4"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="343dp" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/option_4"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName5"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="395dp" />
</androidx.constraintlayout.widget.ConstraintLayout>