<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_questions"
        android:textSize="35sp"
        android:textAlignment="center"
        tools:ignore="MissingConstraints"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_00"
        android:textSize="35sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        tools:ignore="MissingConstraints"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correct_answers"
        android:textSize="35sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        tools:ignore="MissingConstraints"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_correct_answers"
        android:textSize="35sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        tools:ignore="MissingConstraints"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/incorrect_answers"
        android:textSize="35sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        tools:ignore="MissingConstraints"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_00"
        android:textSize="35sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        tools:ignore="MissingConstraints"
        android:gravity="center_horizontal" />
</androidx.constraintlayout.widget.ConstraintLayout>