<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/about_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_type1"
        android:gravity="center_horizontal"
        android:text="@string/about"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/about_devtitle_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button_type1"
        android:gravity="center_horizontal"
        android:text="@string/developed_by"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/about_title_tv"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/about_dev1_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/customtv_1"
        android:gravity="center_horizontal"

        android:text="@string/s_m_samnoon_abrar"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"

        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/about_devtitle_tv"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/about_dev2_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customtv_1"

        android:gravity="center_horizontal"
        android:text="@string/dipta_mazumdar"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@id/about_dev1_tv"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/about_dev3_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customtv_1"
        android:gravity="center_horizontal"
        android:text="@string/md_omar_faruque_fahad"
        android:textAlignment="center"

        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/about_dev2_tv"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/about_dev4_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_type1"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/developed_for_se_lab_project"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/about_dev3_tv"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/back_from_settings_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button_type1"
        android:text="@string/back_to_menu"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_dev4_tv"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>